# ai-file-processor

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  samconfig.toml  samconfig.toml.example  template.yaml
src/statemachine/: definition.asl.json
src/status/: handler.py
src/trigger/: handler.py  requirements.txt
src/worker/: handler.py  requirements.txt
tests/: test_handler.py
tests/fixtures/: s3_event.json  sample_prompt.json  sample_prompt_with_config.json  worker_event.json
